Load coherent properly

--- a/pubg-hack-ui/index.html
+++ b/pubg-hack-ui/index.html
@@ -5,6 +5,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PUBG MITM Hack</title>
   <meta charset="utf-8" />
+
+  <script>
+   var _dev_ = false;
+   var broConfiguration = {
+     "gate": "https://prod-live-front.playbattlegrounds.com/index.html",
+     "uri": "https://prod-live-entry.playbattlegrounds.com/publicproxy",
+     "entry": "ws://prod-live-entry.playbattlegrounds.com:81/userproxy",
+     "secureEntry": "wss://prod-live-entry.playbattlegrounds.com/userproxy",
+     "useSecure": true,
+     "credential": {
+       "steam": "provider={provider}&ticket={ticket}&playerNetId={playerNetId}&cc={cc}&clientGameVersion={clientGameVersion}"
+     },
+     "verreq": "2.6.36",
+     "LayoutMode": "",
+     "LanpartyHome": "http://52.59.158.42/Dreamhack/Game/{accountId}/day1_qualifying/1"
+   };
+   var production = true;
+  </script>
+  <script src="./coherent.js"></script>
+
+
   <script>
     var LOAD_DATA = __LOAD_DATA_JSON__;
   </script>
